soundscape_project/static/style.css
body {
	width: 100em;
	margin-top: 0 em;
	font-family: "Helvetica", sans-serif;
	background-color: #BBCD99;
}

h1 {
	font-size: 50px;
	color: #83AF83;
	text-align: left:;
	margin-bottom: 0em;
}

header {
	position: absolute;
	border-bottom: thick solid #628484;
	margin-bottom: 3em;
	margin-left: 5em;

	width: 99.5em;
}

iframe {
	position: relative;
	margin-top: 10em;
	width: 27.5em;
	height: 10.25em;
}

aside > a {
	margin-left: 1em;
}

footer {
	position: relative;
	float: clear;

	border-top: thick solid #628484;

	width: 99.5em;
	
	margin-top: 65.5em;

	text-align: center;
	
}

#message {
	color :#1487a7;
	font-size: 1.4em;
}

#content {
	position: absolute;
	display: inline-block;
	width: 99.5em;
	height: 73em;
	margin-left: 5em;
	margin-top: -15em;
	background-color: #F1F1F1;
	z-index: -1;
}

#info {
	float: clear;
}

#mapContainer {
	position: absolute;
	
	height: 40em;
	width: 70em;

	float: left;
	margin-top: 22.5em;
}

#songTable {
	position: absolute;
	
	height: 38em;
	width: 27.5em;
	
	border: 1em solid #ADADAD;
	
	margin-left: 70em;
	margin-top: -40em;

	float: right;
}

